sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var i : Int;
      ^AlgBubbleSort1:4: error: local variables must be initialized
  var i : Int;
      ^AlgBubbleSort1:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var j : Int;
      ^AlgBubbleSort1:5: error: local variables must be initialized
  var j : Int;
      ^