sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var length : Int = getValueCount();
  var i : Int;
  var j : Int;
  for(i <- 0 to length)
  {
  	for(j <- i to length)
    {
      if(isSmaller(i,j))
      {
        swap(i,j);
      }
    }
    
  }
    
}